# polars-hash

./: .gitignore  LICENSE  README.md
.github/workflows/: CI.yml
polars_hash/: Cargo.toml  Makefile  README.md  pyproject.toml  requirements.txt
polars_hash/polars_hash/: Cargo.toml  README.md  __init__.py  pyproject.toml
polars_hash/polars_hash/polars_hash/: __init__.py
polars_hash/polars_hash/src/: expressions.rs  geohashers.rs  lib.rs  sha_hashers.rs
polars_hash/polars_hash/stubs/polars/expr/expr/Expr/: __init__.pyi
polars_hash/src/: expressions.rs  fasthash_hashers.rs  geohashers.rs  h3.rs  hmac_hashers.rs  lib.rs  murmur_hashers.rs  murmurhash_hashers.rs  sha_hashers.rs  uuid_hashers.rs  xxhash_hashers.rs
polars_hash/tests/: test_hash.py
src/: Makefile  requirements.txt
src/polars_hash/: Cargo.toml  README.md  pyproject.toml
src/polars_hash/polars_hash/: __init__.py
src/polars_hash/src/: expressions.rs  lib.rs
src/tests/: test_hash.py
