[package]
name = "polars_hash"
version = "0.5.4"
edition = "2021"

[lib]
name = "polars_hash"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.44.2", features = ["dtype-struct"] }
polars-arrow = { version = "0.44.2" }
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.18.0", features = ["derive", "dtype-struct"] }
serde = { version = "1", features = ["derive"] }
wyhash = { version = "0.5.0" }
geohash = { version = "0.13.1" }
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
blake3 = { version = "1.5.4" }
md5 = { version = "0.7.0" }
h3o = { version = "0.6.4" }
xxhash-rust = { version = "0.8.12", features = ["xxh32", "xxh64"] }
mur3 = { version = "0.1.0" }
hex = {version = "0.4"}


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
