[package]
name = "polars_hash"
version = "0.2.2"
edition = "2021"

[lib]
name = "polars_hash"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "*", features = ["dtype-struct"]}
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = { version = "0.9", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
sha256 = { version = "1.4.0"}
wyhash = {version = "0.5.0"}
geohash = {version = "0.13.0"}


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }