[package]
name = "polars_hash"
version = "0.4.2"
edition = "2021"

[lib]
name = "polars_hash"
crate-type = ["cdylib"]

[dependencies]
polars = { version = "0.37.0", features = ["dtype-struct"] }
polars-arrow = { version = "0.37.0" }
pyo3 = { version = "0.20", features = ["extension-module"] }
pyo3-polars = { version = "0.11.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
wyhash = { version = "0.5.0" }
geohash = { version = "0.13.0" }
sha1 = { version = "0.10.6" }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
blake3 = { version = "1.5.0" }
md5 = {version = "0.7.0"}


[target.'cfg(target_os = "linux")'.dependencies]
jemallocator = { version = "0.5", features = ["disable_initial_exec_tls"] }
