[build-system]
requires = ["maturin>=1.0,<2.0", "polars>=0.19.9"]
build-backend = "maturin"

[project]
name = "polars-hash"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
version = "0.1.0"
authors = [
  { name="Ion Koutsours", email="" },
]
description = "Stable hashing functionalitities for Polars across versions"
readme = "README.md"
